--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,67 +1,54 @@
 // @import "reset";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/aos/dist/aos.css";
+@import "bootstrapicons.scss";
 @import "variables";
+@import "tinyslider";
 @import "responsive";
-@import "owlcarousel";
+@import "nav";
 
-*{
-	font-family: 'Montserrat', sans-serif;
-
+* {
+    font-family: "Montserrat", sans-serif;
 }
 
-
-.copyright{
-	background: #313131;
+.copyright {
+    background: #313131;
 }
 
-.logo{
-	img{
-		max-width: 225px;
+.logo {
+    img {
+        max-width: 225px;
 
-		@include xs {
-			    // margin-top: 25px;
-		}
-	}
-}
-
-
-
-
-
-
-
-
-
-
-.copyright{
-    padding: 20px 0;
-    span{
-        font-size: 12px !important;
-    color: #bfbfbf;
-    	margin-right: 20px;
-a {
-	font-size: 12px !important;
-    color: #bfbfbf;
-    
-
-}
-    	@include xs {
-    		    margin: 10px;
-    display: block;
-    	}
+        @include xs {
+            // margin-top: 25px;
+        }
     }
 }
 
+.copyright {
+    padding: 20px 0;
+    span {
+        font-size: 12px !important;
+        color: #bfbfbf;
+        margin-right: 20px;
+        a {
+            font-size: 12px !important;
+            color: #bfbfbf;
+        }
+        @include xs {
+            margin: 10px;
+            display: block;
+        }
+    }
+}
 
-
-
-
-
-  .js div#preloader {
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 999;
-  width: 100%;
-  height: 100%;
-  overflow: visible;
-  background: #fff url("https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif") no-repeat center center; }
+.js div#preloader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+    background: #fff url("https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif") no-repeat center center;
+}
