--- a/src/scss/_template.scss
+++ b/src/scss/_template.scss
@@ -1,47 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,700&display=swap");
 * {
     font-family: "Montserrat", sans-serif;
 }
 h1 {
     color: #ff0000;
-}
-.copyright {
-    background: #313131;
-}
-
-.logo {
-    img {
-        max-width: 225px;
-
-        @include media-breakpoint-down(sm) {
-            margin-top: 25px;
-        }
-    }
-}
-
-.copyright {
-    padding: 20px 0;
-    span {
-        font-size: 12px !important;
-        color: #bfbfbf;
-        margin-right: 20px;
-        a {
-            font-size: 12px !important;
-            color: #bfbfbf;
-        }
-        @include media-breakpoint-down(sm) {
-            margin: 10px;
-            display: block;
-        }
-    }
-}
-
-.js div#preloader {
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 999;
-    width: 100%;
-    height: 100%;
-    overflow: visible;
-    background: #fff url("https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif") no-repeat center center;
 }
